# cu_MCP

./: .gitignore  DEPLOYMENT_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  RENDER_SETUP_STEPS.md  pyproject.toml  render.yaml  requirements.txt
data/: cu_data.duckdb
docs/: account_codes.md  ratio_formulas.md
examples/: example_queries.md
scripts/: apply_fix.py  fix_ratios_view.sql
src/cu_mcp/: __init__.py  server.py
